# cassandra_testing

./: .gitignore  prometheus.yml
killrvideo-all-in-one/: README.md  docker-compose.yml  (+1 more)
metric-collector-for-apache-cassandra/dashboards/demo/: CLAUDE.md  HOW-IT-WORKS.md  README.md  clean-kafka-connect-sinks.sh  dc1-node1.yaml  dc2r2-node1.yaml  dc2r2-node2.yaml  dc2r2-node3.yaml  dc2r2-node4.rackdc.properties  dc2r2-node4.yaml  diagnose-kafka-connect.sh  docker-compose.yml  main-cluster-dc2.rackdc.properties  pyproject.toml  reset-kafka-connect-demo.sh  run-demo-stack.sh  secondary-dc1.rackdc.properties  secondary-rackdc.properties  standalone-rackdc-dc1.properties  standalone-rackdc-dc2.properties  start-full-stack.sh  tg_mcac.json  verify-auto-bootstrap.md
metric-collector-for-apache-cassandra/dashboards/demo/cassandra/: README.md  apply-compaction-lab.sh  apply-twcs-gc-lab.sh  ensure-compaction-lab.cql  ensure-twcs-gc-lab.cql  run-twcs-gc-sweep.sh
metric-collector-for-apache-cassandra/dashboards/demo/k8s/: README.md  namespace.yaml
metric-collector-for-apache-cassandra/dashboards/demo/kafka/: README.md
metric-collector-for-apache-cassandra/dashboards/demo/kafka-connect-register/: register-all.sh
metric-collector-for-apache-cassandra/dashboards/demo/mongo-kafka/: README.md  prepare-demo-collections.sh  register-mongo-connectors.sh  seed-demo-items.sh
metric-collector-for-apache-cassandra/dashboards/demo/mongo-sharded/: README.md  add-shards.sh  init-replica-sets.sh
metric-collector-for-apache-cassandra/dashboards/demo/nodetool-exporter/: exporter.py
(+254 files in other folders)
